--- a/presentations/html5/themes/mozilla/styles/style.css
+++ b/presentations/html5/themes/mozilla/styles/style.css
@@ -45,8 +45,8 @@ body:after {
 	padding:80px 120px 0;
 	width:784px;
 	height:560px;
-	background:url(../images/bg-openbages.png);
-	color:rgb(255,255,255);
+	background:url(../images/bg-sandstone-2.png);
+	color:rgb(62,62,62);
 	}
 
 /* 
@@ -130,7 +130,7 @@ body:after {
 /* Header */
 .slide header {
 	margin:0 0 58px;
-	color:rgb(255,255,255);
+	color:rgb(62,62,62);
 	text-transform: uppercase;
 	font:lighter 40px/1.13 'OpenSansLight', sans-serif;
 	}
@@ -217,7 +217,7 @@ blockquote .quotesource {
 		position:absolute;
 		margin-left:-120px;
 		width:100px;
-		color:rgb(255,255,255);
+		color:rgb(62,62,62);
 		text-align:right;
 		}
 	.slide ul > li:before {
@@ -520,7 +520,7 @@ blockquote .quotesource {
 			bottom:20px;
 			right:90px;
 			font-size: 16px;
-			color:rgba(255,255,255,0.6);
+			color:rgba(62,62,62,0.6);
 			line-height:1;
 			}
 		.full .slide section {
@@ -546,7 +546,7 @@ blockquote .quotesource {
 	bottom:20px;
 	left:118px;
 	border-radius:2px;
-	border:2px solid rgba(255,255,255, 0.3);
+	border:2px solid rgba(62,62,62, 0.3);
 	}
 	.full .progress DIV {
 		width:0;
